<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.feature.words.MainFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/your_words"
            app:menu="@menu/toolbar_menu"
            app:layout_scrollFlags="scroll|enterAlways"
            android:layout_marginHorizontal="8dp">
            <com.google.android.material.search.SearchBar
                android:id="@+id/searchBar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/search_words"
                app:defaultScrollFlagsEnabled="false"
                android:layout_marginEnd="16dp"
                style="@style/Widget.Material3.SearchBar.Outlined"
                app:defaultMarginsEnabled="false"
                android:layout_marginVertical="8dp"/>
        </com.google.android.material.appbar.MaterialToolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:transitionGroup="true"
        android:id="@+id/words_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:listitem="@layout/word_item" />

    <com.google.android.material.search.SearchView
        app:autoShowKeyboard="true"
        android:id="@+id/searchInput"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/search_words"
        app:layout_anchor="@id/searchBar">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/queryHistoryList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

    </com.google.android.material.search.SearchView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:contentDescription="@string/add_word"
        app:srcCompat="@android:drawable/ic_input_add" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>